feat: add bem nested structure

--- a/blocks/footer/__item/_rights/footer__items_rights.css
+++ b/blocks/footer/__item/_rights/footer__items_rights.css
@@ -9,7 +9,7 @@
   .footer__item_rights::before {
     content: '';
     display: block;
-    background-image: url();
+    background-image: url(../../../../images/rights.png);
     width: 14px;
     height: 14px;
     background-color: #000;
