--- a/blocks/header/__button/_notification/header__button_notification.css
+++ b/blocks/header/__button/_notification/header__button_notification.css
@@ -1,6 +1,5 @@
 .header__button_notification {
-    background-image: url();
+    background-image: url(../../../../images/bell.png);
     width: 41.4px;
     height: 49px;
-  
   }
