--- a/blocks/header/__button/_account/header__button_account.css
+++ b/blocks/header/__button/_account/header__button_account.css
@@ -1,5 +1,5 @@
 .header__button_account {
-    background-image: url();
+    background-image: url(../../../../images/unknown_user.png);
     width: 70px;
     height: 70px;
     border-radius: 50%;
