--- a/blocks/header/__button/header__button.css
+++ b/blocks/header/__button/header__button.css
@@ -1,6 +1,6 @@
 .header__button {
     display: block;
-    background-color: #fff;
+    background-color: transparent;
     border: none;
     padding: 0;
   }
