--- a/blocks/footer/__item/_rights/footer__items_rights.css
+++ b/blocks/footer/__item/_rights/footer__items_rights.css
@@ -12,5 +12,5 @@
     background-image: url(../../../../images/rights.png);
     width: 14px;
     height: 14px;
-    background-color: #000;
+    background-color: transparent;
   }
