--- a/blocks/footer/__info/footer__info.css
+++ b/blocks/footer/__info/footer__info.css
@@ -5,4 +5,13 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: relative;
+    top: 1px;
   }
+
+@media (max-width: 1700px) {
+    .footer__info {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+}
