--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -2,5 +2,11 @@
     box-shadow: 0px 1px 5px 0px #00000040;
     margin-top: 156px;
     box-sizing: border-box;
-    padding: 0 187px 0 102px;
+    padding: 0 195px 0 102px;
   }
+
+@media (max-width: 1700px) {
+    .footer {
+        padding: 20px 195px 20px 102px;
+    }
+}
