--- a/blocks/main/__info/main__info.css
+++ b/blocks/main/__info/main__info.css
@@ -3,3 +3,9 @@
     margin-top: 302px;
     width: 100%;
   }
+
+@media (max-width: 950px) {
+    .main__info {
+        margin-top: 30px;
+    }
+}
