--- a/blocks/main/__nav/main__nav.css
+++ b/blocks/main/__nav/main__nav.css
@@ -2,7 +2,7 @@
     box-shadow: 0px 0px 30px 0px #00000033;
     border-radius: 21px;
     min-height: 518px;
-    padding: 75px 54px;
+    padding: 58px 54px;
     max-width: 395px;
     width: 100%;
     background-color: #fff;
@@ -12,4 +12,15 @@
     box-sizing: border-box;
     height: fit-content;
   }
-  
+
+@media (max-width: 950px) {
+    .main__nav {
+        background-color: transparent;
+        box-shadow: none;
+        margin-top: 150px;
+        min-height: auto;
+        padding: 58px 0 0 0;
+        width: 100%;
+        max-width: 100%;
+    }
+}
