--- a/blocks/main/main.css
+++ b/blocks/main/main.css
@@ -1,10 +1,8 @@
 .main {
     display: flex;
     gap: 60px;
-    background-size: 400px 100%;
     padding: 0 126px 0 80px;
     position: relative;
-    background-color: #F8F8F8;
     box-sizing: border-box;
   }
   
@@ -13,8 +11,26 @@
     background-color: #148c88;
     position: absolute;
     display: block;
-    height: 450px;
+    height: 400px;
     width: 100%;
     top: 0;
     left: 0;
   }
+
+@media (max-width: 1111px) {
+    .main::before {
+        height: 470px;
+    }
+}
+
+@media (max-width: 950px) {
+    .main {
+        flex-direction: column;
+    }
+}
+
+@media (max-width: 800px) {
+    .main::before {
+        height: 540px;
+    }
+}
