--- a/blocks/program/__button/program__button.css
+++ b/blocks/program/__button/program__button.css
@@ -9,3 +9,9 @@
     box-sizing: border-box;
     border-radius: 8px;
   }
+
+@media (max-width: 1200px) {
+    .program__button {
+        max-width: 100%;
+    }
+}
