--- a/blocks/program/program.css
+++ b/blocks/program/program.css
@@ -2,7 +2,15 @@
     display: flex;
     background-color: #FFFFFF;
     border-radius: 21px;
-    padding: 21px 41px 21px 23px;
+    padding: 21px 41px 21px 17px;
     width: 100%;
     gap: 34px;
+    box-sizing: border-box;
   }
+
+@media (max-width: 1200px) {
+    .program {
+        flex-direction: column;
+        padding: 21px 17px 21px 17px;
+    }
+}
