--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,4 +1,6 @@
 .App {
+    min-height: 100vh;
     background-color: #F8F8F8;
-    height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
