--- a/src/components/Program/Program.css
+++ b/src/components/Program/Program.css
@@ -59,6 +59,11 @@
     justify-content: flex-end;
 }
 
+.program__buttons_buy {
+    justify-content: space-between;
+    align-items: center;
+}
+
 .program__button {
     font-family: "Open Sans", sans-serif;
     font-size: 21px;
@@ -81,6 +86,14 @@
     background-color: #148C88;
     border: none;
     color: #fff;
+}
+
+programs__buy-status {
+    color: #6C6969;
+    font-family: "Open Sans", sans-serif;
+    font-size: 21px;
+    font-weight: 400;
+    line-height: 28.6px;
 }
 
 @media (max-width: 1350px) {
