--- a/src/components/Programs/Programs.css
+++ b/src/components/Programs/Programs.css
@@ -29,21 +29,20 @@
     margin: 37px 0 0 0;
 }
 
-.programs__page-count {
-    font-family: "Open Sans", sans-serif;
-    font-size: 21px;
-    font-weight: 400;
-    line-height: 28.6px;
+.programs__pagination-bar {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    padding: 0;
 }
 
-.programs__pages-list {
-    list-style: none;
-    padding: 0;
-    display: flex;
-    gap: 8px;
-    justify-content: flex-end;
-    width: 100%;
-    margin: 29px 0 0 0;
+.programs__not-found {
+    color: #888888;
+    font-family: "Open Sans", sans-serif;
+    font-size: 32px;
+    font-weight: 400;
+    line-height: 43.58px;
+    margin: 36px 0 0 0;
 }
 
 @media (max-width: 1200px) {
