--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -23,23 +23,14 @@
     font-weight: 400;
     line-height: 28.6px;
     color: #4D4A4A;
+    list-style-position: inside;
+    position: relative;
+    top: -4px;
 }
 
 .footer__item_rights {
     list-style: none;
     margin: 0;
-    display: flex;
-    gap: 7px;
-    align-items: center;
-}
-
-.footer__item_rights::before {
-    content: '';
-    display: block;
-    background-image: url(../../images/rights.png);
-    width: 14px;
-    height: 14px;
-    background-color: transparent;
 }
 
 .footer__link {
