--- a/src/components/Pagination/Pagination.css
+++ b/src/components/Pagination/Pagination.css
@@ -7,7 +7,7 @@
     padding: 0;
     height: 32px;
     text-align: center;
-    margin: 0;
+    margin: 15px 0 0 0;
     color: rgba(0, 0, 0, 0.87);
     display: flex;
     box-sizing: border-box;
